# rusty-pomodoro

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: app.css
src/components/: Settings.jsx  Timer.jsx
