[package]
name = "rusty-pomodoro"
version = "0.1.0"
description = "A graphical Pomodoro timer application built with Rust and Tauri"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["shell-open", "notification-all", "window-close", "window-hide", "window-show", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
